--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
   <head>
-    <title>REACT PLAY!</title>
-    <meta charset="utf-8">
-    <meta name="description" content="PLAY PLAY PLAY">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./styles/main.css">
+    <meta charset="utf-8" />
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="app">
-    </div>
-    <script src="./js/main.jsx"></script>
+    <main>
+      <h1></h1>
+    </main>
+    <script src="bundle.js"></script>
   </body>
 </html>
