add some components

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h1>3rd time</h1>
+      <h1>PLAN OF LIFE</h1>
       <div id="App"></div>
     </main>
     <script src="bundle.js"></script>
