--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <main>
-      <h1>3rd time</h1>
-      <div id="App"></div>
+      <div id="app"></div>
     </main>
     <script src="bundle.js"></script>
   </body>
